--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="h-dvh"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
