--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root" class="h-dvh"></div>
     <script type="module" src="/src/main.jsx"></script>
+    asdf
   </body>
 </html>
